tests/Fase2-Semantic/error/t03-using_not_declared_var.ctds
class main {
	integer x;

	integer add(){
		y = x+1;
		return x;
	}

	void main(){
		x=0;
		add();
	}
	
}